--- a/My Website/style.css
+++ b/My Website/style.css
@@ -17,11 +17,12 @@ header{
     font-size: 14.5px;
     background: rgba(46, 46, 46, 0.6);
     letter-spacing: 2.5px;
+	overflow: hidden;
 }
 
 .navbar-nav li {
     padding-right: 2%;
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .navbar-dark .navbar-nav .nav-link{
@@ -55,12 +56,14 @@ header{
     font-weight: 700;
     letter-spacing: 3px;
     padding-bottom: 8px;
+	color: white;
 }
 
 .caption h2 {
         font-size: 25px;
         font-weight: 700;
         letter-spacing: 3px;
+		color: white;
 }
 
 #about {
